// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn LockFile utility berry should parse lockfile correctly 1`] = `
Object {
  "@ampproject/remapping@2.2.0": Object {
    "checksum": "d74d170d06468913921d72430259424b7e4c826b5a7d39ff839a29d547efb97dc577caa8ba3fb5cf023624e9af9d09651afc3d4112a45e2050328abc9b3a2292",
    "dependencies": Object {
      "@jridgewell/gen-mapping": "^0.1.0",
      "@jridgewell/trace-mapping": "^0.3.9",
    },
    "languageName": "node",
    "linkType": "hard",
    "packageMeta": Array [
      "@ampproject/remapping@npm:^2.1.0",
    ],
    "resolution": "@ampproject/remapping@npm:2.2.0",
    "rootVersion": true,
    "version": "2.2.0",
  },
}
`;

exports[`yarn LockFile utility berry should parse lockfile correctly 2`] = `
Object {
  "typescript@4.8.4": Object {
    "bin": Object {
      "tsc": "bin/tsc",
      "tsserver": "bin/tsserver",
    },
    "checksum": "3e4f061658e0c8f36c820802fa809e0fd812b85687a9a2f5430bc3d0368e37d1c9605c3ce9b39df9a05af2ece67b1d844f9f6ea8ff42819f13bcb80f85629af0",
    "languageName": "node",
    "linkType": "hard",
    "packageMeta": Array [
      "typescript@npm:~4.8.2",
    ],
    "resolution": "typescript@npm:4.8.4",
    "rootVersion": true,
    "version": "4.8.4",
  },
}
`;

exports[`yarn LockFile utility classic should parse lockfile correctly 1`] = `
Object {
  "@ampproject/remapping@2.2.0": Object {
    "dependencies": Object {
      "@jridgewell/gen-mapping": "^0.1.0",
      "@jridgewell/trace-mapping": "^0.3.9",
    },
    "integrity": "sha512-qRmjj8nj9qmLTQXXmaR1cck3UXSRMPrbsLJAasZpF+t3riI71BXed5ebIOYwQntykeZuhjsdweEc9BxH5Jc26w==",
    "packageMeta": Array [
      "@ampproject/remapping@^2.1.0",
    ],
    "resolved": "https://registry.yarnpkg.com/@ampproject/remapping/-/remapping-2.2.0.tgz#56c133824780de3174aed5ab6834f3026790154d",
    "rootVersion": true,
    "version": "2.2.0",
  },
}
`;

exports[`yarn LockFile utility classic should parse lockfile correctly 2`] = `
Object {
  "typescript@4.8.4": Object {
    "integrity": "sha512-QCh+85mCy+h0IGff8r5XWzOVSbBO+KfeYrMQh7NJ58QujwcE22u+NUSmUxqF+un70P9GXKxa2HCNiTTMJknyjQ==",
    "packageMeta": Array [
      "typescript@~4.8.2",
    ],
    "resolved": "https://registry.yarnpkg.com/typescript/-/typescript-4.8.4.tgz#c464abca159669597be5f96b8943500b238e60e6",
    "rootVersion": true,
    "version": "4.8.4",
  },
}
`;
